--- a/templates/explore.html
+++ b/templates/explore.html
@@ -30,19 +30,20 @@
         #all {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: space-evenly;
         }
         .notebook {
-            margin: 10px;
-            width: 200px;
-            height: 282.84px;
+            color: white;
+            font-weight: bold;
+            font-size: 1.2rem;
+            margin: 4px;
+            width: 150px;
+            height: 150px;
             box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
                 0 1px 5px 0 rgba(0, 0, 0, 0.12),
                 0 3px 1px -2px rgba(0, 0, 0, 0.2);
             padding: 20px;
             box-sizing: border-box;
-            font-weight: bold;
-            background: white;
         }
     </style>
 </head>
@@ -51,12 +52,12 @@
     <pt-navbar user-display-name="{{user.email or ''}}" user-photo-url="{{user.photo_url}}"></pt-navbar>
     <section>
         <h1>Explore</h1>
-        These are notebooks created by members of the community
+        These are problems created by members of the community
     </section>
     <section id="all">
         {% for item in docs %}
             <a href="/notebooks/{{item.id}}">
-                <div class="notebook">
+                <div class="notebook" id="notebook-{{item.id}}">
                     {{item.title}}
                 </div>
             </a>
@@ -64,6 +65,15 @@
     </section>
     
     <script src="/static/pt_navbar.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/geopattern/1.2.3/js/geopattern.min.js"></script>
+    <script>
+        document.querySelectorAll('.notebook')
+            .forEach(nb => {
+                nb.style.backgroundImage = GeoPattern.generate(nb.id, {
+                    //color: '#ffffff'
+                }).toDataUrl()
+            })
+    </script>
 </body>
 
 </html>
