--- a/templates/notebook.html
+++ b/templates/notebook.html
@@ -44,10 +44,10 @@
                 column-gap: 8px;
             }
             header #author img{
-                height: 40px;
-                width: 40px;
+                height: 2rem;
+                width: 2rem;
                 object-fit: cover;
-                border-radius: 20px;
+                border-radius: 1rem;
             }
             header #title{
                 font-size: 3.2rem;
