--- a/templates/user.html
+++ b/templates/user.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile - Phystrainer</title>
+    <link rel="stylesheet" href="/static/styles.css">
+
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
@@ -55,18 +57,6 @@
                 flex-basis: 100%;
             }
         
-        .notebook {
-            margin: 10px;
-            width: 200px;
-            height: 282.84px;
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-                0 1px 5px 0 rgba(0, 0, 0, 0.12),
-                0 3px 1px -2px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            box-sizing: border-box;
-            font-weight: bold;
-            background: white;
-        }
     </style>
 </head>
 <body>
@@ -85,7 +75,7 @@
         <h2>Notebooks</h2>
         {% for notebook in notebooks %}
             <a href="/notebooks/{{notebook.id}}">
-                <div class="notebook">
+                <div class="notebook-thumbnail">
                     {{notebook.title}}
                 </div>
             </a>
