--- a/templates/collection.html
+++ b/templates/collection.html
@@ -19,8 +19,8 @@
         #problems{
             display: flex;
             flex-wrap: wrap;
-            column-gap: 8px;
-            row-gap: 8px;
+            column-gap: 2rem;
+            row-gap: 2rem;
             justify-content: space-around;
         }
             #problems h2{
